--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cvmaker",
-  "version": "1.0.1",
+  "name": "resumax",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
