--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,11 @@ http {
     server {
         listen 80;
         server_name www.resumax.ir;
-        return 301 https://resumax.ir$request_uri;
+        location / {
+          try_files $uri $uri/ /index.html;
+        }
     }
+
+
 }
 
