--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,13 @@
 http {
     server {
         listen 80;
-        server_name www.resumax.ir;
-        location / {
-          try_files $uri $uri/ /index.html;
-        }
+        server_name resumax.ir www.resumax.ir;
+          location / {
+            add_header Access-Control-Allow-Origin "*";
+            expires max;
+            access_log off;
+            try_files $uri $uri/ /index.html;
+          }
     }
 
 
