--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@ http {
     server {
         listen 80;
         server_name resumax.ir www.resumax.ir;
+        root /usr/share/nginx/html
           location / {
             add_header Access-Control-Allow-Origin "*";
             expires max;
@@ -9,7 +10,5 @@ http {
             try_files $uri $uri/ /index.html;
           }
     }
-
-
 }
 
