--- a/nginx.conf
+++ b/nginx.conf
@@ -2,11 +2,8 @@ http {
     server {
         listen 80;
         server_name resumax.ir www.resumax.ir;
-        root /usr/share/nginx/html
+        root /usr/share/nginx/html;
           location / {
-            add_header Access-Control-Allow-Origin "*";
-            expires max;
-            access_log off;
             try_files $uri $uri/ /index.html;
           }
     }
