--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,9 @@ http {
         server_name resumax.ir www.resumax.ir;
         root /usr/share/nginx/html;
           location / {
+            add_header Access-Control-Allow-Origin "*";
+            expires max;
+            access_log off;
             try_files $uri $uri/ /index.html;
           }
     }
