--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 events {}
 http {
     include /etc/nginx/mime.types;
+    sendfile on;
     server {
         listen 80;
         server_name resumax.ir www.resumax.ir;
